src/server/core/rust-macros/tests/fail/derive_tuple_struct.stderr
error: SeamType requires named fields
 --> tests/fail/derive_tuple_struct.rs:6:13
  |
6 | struct Point(f64, f64);
  |             ^^^^^^^^^^
